--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@prisma/client": "^3.7.0",
     "express": "^4.17.2",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/nodemailer": "^6.4.4",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.3",
     "prisma": "^3.7.0"
   }
 }
